k8s/30-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  namespace: online-boutique
  labels:
    app: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/adservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9555
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
  namespace: online-boutique
  labels:
    app: cartservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/cartservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7070
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits:   { cpu: 300m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  namespace: online-boutique
  labels:
    app: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5050
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits:   { cpu: 300m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  namespace: online-boutique
  labels:
    app: currencyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/currencyservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7000
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: online-boutique
  labels:
    app: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/emailservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: online-boutique
  labels:
    app: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/paymentservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  namespace: online-boutique
  labels:
    app: productcatalogservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3550
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  namespace: online-boutique
  labels:
    app: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  namespace: online-boutique
  labels:
    app: shippingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/shippingservice:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: online-boutique
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: server
          image: gcr.io/google-samples/microservices-demo/frontend:v0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /_healthz
              port: 8080
              httpHeaders:
                - name: Cookie
                  value: shop_session-id=x-readiness-probe
            initialDelaySeconds: 10
          livenessProbe:
            httpGet:
              path: /_healthz
              port: 8080
              httpHeaders:
                - name: Cookie
                  value: shop_session-id=x-liveness-probe
            initialDelaySeconds: 10
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits:   { cpu: 300m, memory: 256Mi }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  namespace: online-boutique
  labels:
    app: loadgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loadgenerator
  template:
    metadata:
      labels:
        app: loadgenerator
    spec:
      containers:
        - name: main
          image: gcr.io/google-samples/microservices-demo/loadgenerator:v0.8.0
          imagePullPolicy: IfNotPresent
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits:   { cpu: 200m, memory: 256Mi }
