k8s/20-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: online-boutique
spec:
  selector:
    app: adservice
  ports:
    - name: grpc
      port: 9555
      targetPort: 9555
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: online-boutique
spec:
  selector:
    app: cartservice
  ports:
    - name: grpc
      port: 7070
      targetPort: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
  namespace: online-boutique
spec:
  selector:
    app: checkoutservice
  ports:
    - name: grpc
      port: 5050
      targetPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  namespace: online-boutique
spec:
  selector:
    app: currencyservice
  ports:
    - name: grpc
      port: 7000
      targetPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
  namespace: online-boutique
spec:
  selector:
    app: emailservice
  ports:
    - name: grpc
      port: 5000
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: online-boutique
spec:
  selector:
    app: paymentservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: online-boutique
spec:
  selector:
    app: productcatalogservice
  ports:
    - name: grpc
      port: 3550
      targetPort: 3550
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  namespace: online-boutique
spec:
  selector:
    app: recommendationservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
  namespace: online-boutique
spec:
  selector:
    app: shippingservice
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: online-boutique
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
